# Maskera

./: .gitignore  CLAUDE.md  README.md  masking_engine.py  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  translationUtils.ts  types.ts  worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ner.rs
