[package]
name = "maskera"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "maskera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
# NER-inferens native i Rust — eliminerar WASM OOM
tract-onnx = "0.21"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex", "progressbar"] }
ndarray = "0.16"
regex = "1"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "native-tls"] }
futures-util = "0.3"

# ── Dev-profil: optimera dependencies med O3 även i debug-bygget ──────────────
# Utan detta är tract-onnx ~20x långsammare (ingen SIMD, ingen inlining).
# Din egen kod förblir ooptimerad (snabba rebuilds).
[profile.dev.package."*"]
opt-level = 3
